--- a/monografia/Conteudo/Comeco/introducao.tex
+++ b/monografia/Conteudo/Comeco/introducao.tex
@@ -50,10 +50,9 @@ sistema de edifício inteligente por diversos usuários, focando no controle das
 Dentre os principais objetivos específicos destacam-se:
 
 \begin{itemize}
-    \item Realizar uma pesquisa bibliográfica sobre edifícios inteligentes e suas demandas;
     \item Definir requisitos para um sistema de gerenciamento de um edifício inteligente;
     \item Propor e implementar um sistema de gerenciamento para edifícios inteligentes;
-    \item Tornar este sistema acessível a múltiplos usuários sem necessidade de cadastro prévio;
+    \item Tornar este sistema acessível a múltiplos usuários como visitantes;
 \end{itemize}
 
 % Estrutura do trabalho (explicando brevemente o que será abordado em cada seção)
