--- a/monografia/Conteudo/Desenvolvimento/InterfacedeUsuario/conductor_auth.tex
+++ b/monografia/Conteudo/Desenvolvimento/InterfacedeUsuario/conductor_auth.tex
@@ -1,4 +1,5 @@
 \subsection{Autenticação}
+\label{subsec:conductor-auth}
 
 O \emph{Conductor} é uma parte fundamental da autenticação no sistema \emph{Opus}, uma vez que é muito mais fácil de implementar uma autenticação com Google
 em um aplicativo móvel e muito mais seguro para o usuário final.
