--- a/monografia/Conteudo/Fim/trabalhos_futuros.tex
+++ b/monografia/Conteudo/Fim/trabalhos_futuros.tex
@@ -1,8 +1,8 @@
-\chapter{Trabalhos Futuros}
+\section{Trabalhos Futuros}
 \label{trabalhos_futuros}
 
-Provada a arquitetura proposta, é possível expandir o sistema para atender a mais dispositivos, integrando mais partes de um edifício, abrangendo uma
-maior quantidade de hardwares disponíveis no mercado.
+Porém, provada a arquitetura proposta, é possível expandir o sistema para atender a mais dispositivos, integrando mais partes de um edifício, abrangendo uma
+maior quantidade de hardwares disponíveis no mercado, incluindo os que já são comercialmente estabelecidos para uso em automação predial.
 Recomenda-se para trabalhos futuros:
 \begin{itemize}
     \item \textbf{Integração com mais dispositivos}: A integração com mais dispositivos pode ser feita através da criação de novos \emph{Drivers}, 
