--- a/monografia/Conteudo/informacoes_gerais.tex
+++ b/monografia/Conteudo/informacoes_gerais.tex
@@ -12,8 +12,8 @@
 % Titulação: Dr. Dr$^a$. Msc Me Ma PhD etc
 \orientador[Dr.]{Antonio Marcos Massao Hachisuca}
 \coorientador[Titulação]{} % Preencher somente se houver co-orientador
-\membroum[Titulação]{Nome 1º membro da banca} % Preencher com o nome do primeiro membro da banca
-\membrodois[Titulação]{Nome 2º membro da banca} % Preencher com o nome do segundo membro da banca
+\membroum[Ma.]{Teresinha Arnauts Hachisuca} % Preencher com o nome do primeiro membro da banca
+\membrodois[Me.]{Willian Francisco da Silva} % Preencher com o nome do segundo membro da banca
 
 \tipotrabalho{Trabalho de Conclusão de Curso}
 
