--- a/monografia/Conteudo/Desenvolvimento/TesteseResultados/testes.tex
+++ b/monografia/Conteudo/Desenvolvimento/TesteseResultados/testes.tex
@@ -1,102 +1,62 @@
-\subsection{Testes}
+\section{Testes}
+
+Os testes buscaram validar se o objetivo específico ``Propor e implementar um sistema de gerenciamento para edifícios inteligentes'' foi atingido,
+assim como  ``Tornar este sistema acessível a múltiplos usuários como visitantes'', para isso foi necessário executar três testes,
+com objetivo de: 
+\begin{enumerate}
+    \item Verificar se o sistema é capaz de manter mais de um usuário;
+    \item Verificar se o sistema é capaz de gerar a chave (QR Code) para um dispositivo acessível para múltiplos usuários;
+    \item Verificar se o sistema é capaz de permitir o controle do dispositivo para múltiplos usuários seguindo os limites especificados.
+\end{enumerate}
 
 Tanto o \emph{Opus} quanto o \emph{Maestro} produzem logs de suas atividades, que foram utilizados para verificar se os comandos enviados
 pela Interface de Usuário foram recebidos e processados corretamente.
 
-\subsubsection{Teste 1}
+\subsection{Teste 1}
 O primeiro teste consistiu em verificar se o \emph{Maestro} é capaz de suportar três usuários utilizando a autenticação do Google enviada pelo
 \emph{Conductor}.
 
-\begin{figure}[h!]
-    \conteudoFigura
-    [Elaborado pelo Autor (2025)]
-    {0.6}
-    {teste1.png}
-    {LOGs do \emph{Maestro} após o login dos usuários}
-    {fig:test1}
-\end{figure}
+Ao abrir o aplicativo \emph{Conductor}, o usuário é recebido pela tela de login do aplicativo, como mostrado na subseção \ref{subsec:conductor-auth},
+o teste consistiu em autenticar três usuários diferentes, ``Victor Alicino'', ``Sergio Dias Alicino'' e ``Meyre Alicino''.
 
-Como pode ser visto na Figura \ref{fig:test1}, o \emph{Maestro} foi capaz de autenticar os três usuários.
+Ao enviar os dados da conta Google do usuário por uma requisição \emph{POST} na rota \lstinline{/auth/conductor/login}, o
+servidor \emph{Maestro} deve responder com um token de autenticação para cada usuário, que será usado nas requisições dos próximos testes,
+o teste é considerado um sucesso, se ao verificar os logs do \emph{Maestro} for encontrado o log de nível \emph{DEBUG} notificando que o
+usuário foi autenticado.
 
-\subsubsection{Teste 2}
-O segundo teste consistiu em verificar se o \emph{Maestro} é capaz de gerar um QR Code para um dispositivo. Como não há uma interface para 
-acessar essa rota no \emph{Maestro}, foi necessário acessar diretamente a rota por um software de requisições HTTP.
+\subsection{Teste 2}
+O segundo teste consistiu em verificar se o \emph{Maestro} é capaz de gerar um QR Code para um dispositivo. 
+Como não há uma interface de usuário para acessar essa rota no \emph{Maestro}, foi necessário acessar diretamente a rota por um software de
+requisições HTTP e incluir o token de autenticação de um usuário com permissão de administrador na requisição.
+O servidor \emph{Opus} utilizado possui no banco de dados do \emph{Maestro} o id ``\lstinline{a05d2db1-d40b-4bdb-ab47-f243468f27b7}'' e o
+dispositivo ar-condicionado está cadastrado dentro desse servidor \emph{Opus} com o id ``\lstinline{e3e9906f-fcb0-11ef-8ded-001a7dda710a}''.
 
-Utilizando o software Insomnia, foi feita uma requisição GET para a rota:
+A rota para gerar o QR Code é \lstinline{/opus_server/qr_code/<server_id>/<device_id>}, onde ``server\_id'' é o id do servidor \emph{Opus} e
+``device\_id'' é o id do dispositivo no servidor local, utilizando o software Insomnia, foi feita uma requisição GET para esta rota com os seguintes 
+parâmetros:
 \begin{lstlisting}
     /opus_server/qr_code/a05d2db1-d40b-4bdb-ab47-f243468f27b7/
     e3e9906f-fcb0-11ef-8ded-001a7dda710a
 \end{lstlisting}
-onde ``a05d2db1-d40b-4bdb-ab47-f243468f27b7'' 
-é o ID do Servidor \emph{Opus} utilizado no teste e ``e3e9906f-fcb0-11ef-8ded-001a7dda710a'' é o ID do dispositivo com Tasmota no Servidor Local.
 
-\begin{figure}[h!]
-    \conteudoFigura
-    [Elaborado pelo Autor (2025)]
-    {0.5}
-    {teste2.png}
-    {QR Code gerado pelo \emph{Maestro}}
-    {fig:test2}
-\end{figure}
+Em caso de sucesso do teste, é esperado que o \emph{Maestro} retorne um QR Code carregando um token JWT que será utilizado 
+pelo \emph{Opus} para controlar o dispositivo. 
 
-Como mostrado na Figura \ref{fig:maestro-qr}, o \emph{Maestro} foi capaz de gerar o QR Code corretamente.
+\subsection{Teste 3}
 
-\subsubsection{Teste 3}
+O terceiro teste, foi focado em verificar o funcionamento do controle de dispositivos por múltiplos usuários, seguindo as regras de acesso
+definidas no capítulo~\ref{chap:multiusuarios}. Para isso, este teste contou com um roteiro:
+\begin{enumerate}
+    \item O primeiro usuário, escaneia utilizando o aplicativo \emph{Conductor} o QR Code gerado no teste 2;
+    \item O primeiro usuário então irá tentar controlar o dispositivo, realizando algum comando como ligar, desligar ou alterar a temperatura;
+    \item O segundo usuário, irá escanear utilizando o aplicativo \emph{Conductor} o mesmo QR Code;
+    \item O segundo usuário então irá tentar controlar o dispositivo, realizando algum comando como ligar, desligar ou alterar a temperatura;
+    \item O terceiro usuário, irá escanear utilizando o aplicativo \emph{Conductor} o mesmo QR Code;
+    \item O segundo usuário, tentará controlar o dispositivo após o terceiro usuário ter escaneado o QR Code.
+    \item O terceiro usuário então irá tentar controlar o dispositivo, realizando algum comando como ligar, desligar ou alterar a temperatura;
+\end{enumerate}
 
-O último teste consistiu em verificar se o \emph{Maestro} é capaz de gerenciar o acesso de um dispositivo para usuários visitantes, seguindo os limites
-estabelecidos no capítulo~\ref{chap:multiusuarios} 
-
-O teste consistiu em primeiro o usuário ``Victor'' escanear o QR Code gerado no teste 2 e então tentar controlar o dispositivo, o que foi feito com sucesso
-como mostra os logs do \emph{Maestro} na Figura \ref{fig:test3-1} e do \emph{Opus} na Figura \ref{fig:test3-2}.
-
-\begin{figure}[h!]
-    \conteudoFigura
-    [Elaborado pelo Autor (2025)]
-    {0.35}
-    {teste3_2.png}
-    {LOGs do \emph{Maestro} 1}
-    {fig:test3-1}
-\end{figure}
-
-\begin{figure}[h!]
-    \conteudoFigura
-    [Elaborado pelo Autor (2025)]
-    {0.4}
-    {teste3_1.png}
-    {LOGs do \emph{Opus} 1}
-    {fig:test3-2}
-\end{figure}
-
-Em seguida, o usuário ``Sergio'' escaneou o QR Code e tentou controlar o dispositivo, o que também foi feito com sucesso como mostra os
-logs do \emph{Maestro} na Figura \ref{fig:test3-3} e do \emph{Opus} na Figura \ref{fig:test3-4}.
-
-\begin{figure}[h!]
-    \conteudoFigura
-    [Elaborado pelo Autor (2025)]
-    {0.35}
-    {teste3_3.png}
-    {LOGs do \emph{Maestro} 2}
-    {fig:test3-3}
-\end{figure}
-
-\begin{figure}[h!]
-    \conteudoFigura
-    [Elaborado pelo Autor (2025)]
-    {0.4}
-    {teste3_4.png}
-    {LOGs do \emph{Opus} 2}
-    {fig:test3-4}
-\end{figure}
-
-Logo em seguida, o usuário ``Meyre'' escaneou o QR Code e o usuário ``Sergio'' tentou controlar o dispositivo, o que não foi possível, como esperado.
-
-E por fim o usuário ``Meyre'' tentou controlar o dispositivo, o que foi feito com sucesso como mostra os logs do \emph{Opus} na Figura \ref{fig:test3-5}.
-
-\begin{figure}[h!]
-    \conteudoFigura
-    [Elaborado pelo Autor (2025)]
-    {0.4}
-    {teste3_6.png}
-    {LOGs do \emph{Opus} 3}
-    {fig:test3-5}
-\end{figure}
+Neste teste, é esperado que no item 6, o segundo usuário não consiga controlar o dispositivo após o terceiro usuário ter escaneado o QR Code,
+isso deverá acontecer, pois o servidor \emph{Maestro} irá trocar o usuário visitante sempre que um novo (usuário) escanear o QR Code. O servidor não
+deve permitir que mais de um visitante possua controle de um dispositivo ao mesmo tempo, mas deve garantir que todos os visitantes que escanearam o QR Code
+possam controlar o dispositivo.
