--- a/monografia/Conteudo/Prologo/resumo.tex
+++ b/monografia/Conteudo/Prologo/resumo.tex
@@ -1,11 +1,29 @@
 % Resumo em português
 \begin{resumo}
-    Dispositivos de Internet das Coisas (IoT) na automação, em sua maioria, não suportam ambientes compartilhados, como escritórios e coworkings,
-    onde vários usuários precisam controlar o mesmo dispositivo. Este trabalho propõe o desenvolvimento de um sistema multiusuário para edifícios
-    inteligentes, permitindo a operação simultânea de uma unidade de climatização por diversos usuários, a fim de estudar a viabilidade de um
-    sistema para ambientes compartilhados. Os testes realizados demonstraram a viabilidade da solução, possibilitando a integração de dispositivos
-    IoT em espaços coletivos de forma eficiente e escalável.
-    
+    % Contextualização
+    Em tempos modernos, indivíduos passam grande parte de suas vidas em edifícios, com isso, os edifícios inteligentes desempenham um papel fundamental
+    nas cidades inteligentes, todavia, tornar um edifício inteligente é um desafio, pois para receberem este título, edifícios devem ser capazes de 
+    monitorar e controlar o ambiente em que se encontram o que é feito por sensores e atuadores industriais que muitas vezes não são acessíveis.
+    Nos últimos anos, dispositivos de internet das coisas (IoT) têm se tornado acessíveis, especialmente na área de casas inteligentes, onde se 
+    encontram sensores e atuadores de baixo custo, fáceis de instalar e configurar o que apresenta uma oportunidade para a automação de edifícios
+    de forma acessível. No entanto, a aplicação desses dispositivos em edifícios coletivos, como escritórios e coworking, possui um desafio, pois 
+    muitos desses dispositivos acessíveis para casas inteligentes são projetados para uso individual ou residencial, o que inviabiliza seu uso em
+    ambiente compartilhados.
+    % Objetivo
+    Este trabalho teve como objetivo desenvolver um sistema que fosse capaz de habilitar o controle desses dispositivos IoT em ambiente compartilhados
+    para múltiplos usuários sem que eles recebam previamente permissão de um administrador do sistema.
+    % Como foi feito
+    Para atingir este objetivo, foi proposto um sistema chamado \emph{Opus} composto de Servidor Local, Servidor Remoto e Aplicativo Móvel, onde o
+    Servidor Local é responsável por abstrair as comunicações com dispositivos IoT de diferentes fabricantes e protocolos, o Servidor Remoto é responsável
+    por manter a autenticidade dos usuários e mediar a comunicação entre os Servidores Locais e o Aplicativo Móvel, a interface para os usuários 
+    interagirem com o sistema.
+    % Resultados
+    Os testes realizados demonstraram que o sistema foi capaz de permitir que vários usuários mesmo que não registrados para o controle de um dispositivo
+    específico pudessem controlá-lo com acesso de visitante temporário, permitindo que esses dispositivos IoT sejam utilizados em ambientes compartilhados.
+    % Conclusão
+    O sistema permite que dispositivos IoT de casas inteligentes como sensores e atuadores mais acessíveis que soluções tradicionais de automação predial
+    sejam utilizados para converter edifícios coletivos como escritórios e coworking em edifícios inteligentes.
+
     \vspace{\onelineskip}
     \noindent
     \textbf{Palavras-chave}: Edifício Inteligente, Internet das Coisas, SmartOffice, Automação.
@@ -14,11 +32,26 @@
     % Abstract em inglês
 \begin{otherlanguage}{english}
 \begin{abstract}
-    Internet of Things (IoT) devices in automation mostly do not support shared environments, such as offices and coworking spaces, 
-    where multiple users need to control the same device. This study proposes the development of a multi-user system for smart buildings,
-    enabling the simultaneous operation of a climate control unit by multiple users to assess the feasibility of such a system in shared environments.
-    The tests conducted demonstrated the viability of the solution, allowing the efficient and scalable integration of IoT devices in collective spaces.
-    
+    In modern times, individuals spend a significant part of their lives inside buildings. As a result, smart buildings play a fundamental role
+    in smart cities. However, making a building smart is a challenge, as it requires the ability to monitor and control the environment through
+    sensors and industrial actuators, which are often not accessible. In recent years, Internet of Things (IoT) devices have become more affordable,
+    especially in the smart home sector, where low-cost sensors and actuators are easy to install and configure. This presents an opportunity to automate
+    buildings in a more accessible way. Nevertheless, applying these devices in shared buildings, such as offices and coworking spaces, brings a
+    challenge since most of these affordable smart home devices are designed for individual or residential use, making them unsuitable for shared environments.
+
+    This work aimed to develop a system capable of enabling the control of such IoT devices in shared environments for multiple users without
+    requiring prior permission from a system administrator.
+
+    To achieve this goal, a system named \emph{Opus} was proposed, composed of a Local Server, a Remote Server, and a Mobile Application.
+    The Local Server is responsible for abstracting the communication with IoT devices from different manufacturers and protocols.
+    The Remote Server ensures user authentication and mediates communication between Local Servers and the Mobile Application, which serves as the user interface.
+
+    The tests demonstrated that the system successfully allowed multiple users, even those not previously registered to control a specific device,
+    to interact with it through temporary guest access. This enables IoT devices to be used in shared environments.
+
+    The system allows smart home IoT devices, such as sensors and actuators---more affordable than traditional building automation solutions---to
+    be used for converting shared buildings like offices and coworking spaces into smart buildings.
+
     \vspace{\onelineskip}
     \noindent
     \textbf{Keywords}: Smart Buildings, Internet of Things, SmartOffice, Automation.
