--- a/monografia/Conteudo/Desenvolvimento/ServidorLocal/servidor_local.tex
+++ b/monografia/Conteudo/Desenvolvimento/ServidorLocal/servidor_local.tex
@@ -8,7 +8,7 @@ O \emph{Opus} é uma aplicação escrita em Python visando convergir a operaçã
 fabricantes e protocolos em um único ponto de controle, tal funcionalidade é obtida a partir da natureza modular
 do Python que foi aqui aproveitada para criar partes expansíveis do sistema, chamadas de \emph{drivers} e \emph{interfaces}.
 
-A aplicação é organizada em quatro módulos principais, como ilustrado na figura~\ref{fig:opus_overall}, são eles:
+A aplicação é organizada em quatro módulos principais, como ilustrado na figura~\ref{fig:opus1}, são eles:
 \begin{figure}[h!]
     \conteudoFigura
     [Elaborado pelo Autor (2025)]
