--- a/monografia/Conteudo/Prologo/resumo.tex
+++ b/monografia/Conteudo/Prologo/resumo.tex
@@ -3,26 +3,26 @@
     % Contextualização
     Em tempos modernos, indivíduos passam grande parte de suas vidas em edifícios, com isso, os edifícios inteligentes desempenham um papel fundamental
     nas cidades inteligentes, todavia, tornar um edifício inteligente é um desafio, pois para receberem este título, edifícios devem ser capazes de 
-    monitorar e controlar o ambiente em que se encontram o que é feito por sensores e atuadores industriais que muitas vezes não são acessíveis.
+    monitorar e controlar o ambiente em que se encontram o que é feito por sensores e atuadores industriais muitas inacessíveis devido ao alto custo.
     Nos últimos anos, dispositivos de internet das coisas (IoT) têm se tornado acessíveis, especialmente na área de casas inteligentes, onde se 
     encontram sensores e atuadores de baixo custo, fáceis de instalar e configurar o que apresenta uma oportunidade para a automação de edifícios
     de forma acessível. No entanto, a aplicação desses dispositivos em edifícios coletivos, como escritórios e coworking, possui um desafio, pois 
-    muitos desses dispositivos acessíveis para casas inteligentes são projetados para uso individual ou residencial, o que inviabiliza seu uso em
-    ambiente compartilhados.
+    muitos deles são projetados para uso individual ou residencial, o que inviabiliza seu uso em ambientes compartilhados.
     % Objetivo
-    Este trabalho teve como objetivo desenvolver um sistema que fosse capaz de habilitar o controle desses dispositivos IoT em ambiente compartilhados
+    Este trabalho teve como objetivo desenvolver um sistema que fosse capaz de habilitar o controle desses dispositivos IoT em ambientes compartilhados
     para múltiplos usuários sem que eles recebam previamente permissão de um administrador do sistema.
     % Como foi feito
     Para atingir este objetivo, foi proposto um sistema chamado \emph{Opus} composto de Servidor Local, Servidor Remoto e Aplicativo Móvel, onde o
     Servidor Local é responsável por abstrair as comunicações com dispositivos IoT de diferentes fabricantes e protocolos, o Servidor Remoto é responsável
-    por manter a autenticidade dos usuários e mediar a comunicação entre os Servidores Locais e o Aplicativo Móvel, a interface para os usuários 
-    interagirem com o sistema.
+    por manter a autenticidade dos usuários e mediar a comunicação entre os Servidores Locais e o Aplicativo Móvel, por fim, o Aplicativo Móvel
+    proporciona uma interface para que usuário possam interagir com o sistema.
     % Resultados
     Os testes realizados demonstraram que o sistema foi capaz de permitir que vários usuários mesmo que não registrados para o controle de um dispositivo
     específico pudessem controlá-lo com acesso de visitante temporário, permitindo que esses dispositivos IoT sejam utilizados em ambientes compartilhados.
     % Conclusão
-    O sistema permite que dispositivos IoT de casas inteligentes como sensores e atuadores mais acessíveis que soluções tradicionais de automação predial
-    sejam utilizados para converter edifícios coletivos como escritórios e coworking em edifícios inteligentes.
+    Conclui-se que o sistema proposto possibilita a utilização de dispositivos IoT originalmente voltados para casas inteligentes, mais acessíveis do
+    que soluções tradicionais de automação predial, como alternativa viável para a conversão de edifícios coletivos, como escritórios e coworkings,
+    em edifícios inteligentes.
 
     \vspace{\onelineskip}
     \noindent
@@ -32,25 +32,30 @@
     % Abstract em inglês
 \begin{otherlanguage}{english}
 \begin{abstract}
+    % Contextualization
     In modern times, individuals spend a significant part of their lives inside buildings. As a result, smart buildings play a fundamental role
-    in smart cities. However, making a building smart is a challenge, as it requires the ability to monitor and control the environment through
-    sensors and industrial actuators, which are often not accessible. In recent years, Internet of Things (IoT) devices have become more affordable,
-    especially in the smart home sector, where low-cost sensors and actuators are easy to install and configure. This presents an opportunity to automate
-    buildings in a more accessible way. Nevertheless, applying these devices in shared buildings, such as offices and coworking spaces, brings a
-    challenge since most of these affordable smart home devices are designed for individual or residential use, making them unsuitable for shared environments.
-
-    This work aimed to develop a system capable of enabling the control of such IoT devices in shared environments for multiple users without
-    requiring prior permission from a system administrator.
-
-    To achieve this goal, a system named \emph{Opus} was proposed, composed of a Local Server, a Remote Server, and a Mobile Application.
-    The Local Server is responsible for abstracting the communication with IoT devices from different manufacturers and protocols.
-    The Remote Server ensures user authentication and mediates communication between Local Servers and the Mobile Application, which serves as the user interface.
-
-    The tests demonstrated that the system successfully allowed multiple users, even those not previously registered to control a specific device,
-    to interact with it through temporary guest access. This enables IoT devices to be used in shared environments.
-
-    The system allows smart home IoT devices, such as sensors and actuators---more affordable than traditional building automation solutions---to
-    be used for converting shared buildings like offices and coworking spaces into smart buildings.
+    in smart cities. However, transforming a building into a smart one is a challenge, as buildings must be capable of
+    monitoring and controlling their environment, which is typically done through industrial sensors and actuators that are often inaccessible
+    due to their high cost.
+    In recent years, Internet of Things (IoT) devices have become more accessible, especially in the smart home sector, where
+    low-cost sensors and actuators are available, easy to install and configure, presenting an opportunity for affordable building automation.
+    Nevertheless, applying these devices in collective buildings, such as offices and coworking spaces, poses a challenge, as
+    many of them are designed for individual or residential use, making their application in shared environments unfeasible.
+    % Objective
+    This work aimed to develop a system capable of enabling the control of these IoT devices in shared environments
+    by multiple users without requiring prior authorization from a system administrator.
+    % How it was done
+    To achieve this goal, a system named \emph{Opus} was proposed, composed of a Local Server, a Remote Server, and a Mobile Application, where the
+    Local Server is responsible for abstracting communication with IoT devices from different manufacturers and protocols, the Remote Server is responsible
+    for maintaining user authenticity and mediating communication between the Local Servers and the Mobile Application, and finally, the Mobile Application
+    provides an interface for users to interact with the system.
+    % Results
+    The tests performed demonstrated that the system was capable of allowing several users, even those not registered to control a specific device,
+    to operate it with temporary guest access, enabling the use of these IoT devices in shared environments.
+    % Conclusion
+    It is concluded that the proposed system allows the use of IoT devices originally designed for smart homes, which are more accessible than
+    traditional building automation solutions, as a viable alternative for converting collective buildings, such as offices and coworking spaces,
+    into smart buildings.
 
     \vspace{\onelineskip}
     \noindent
